--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				</div>
 			</div>
 
-			<!-- サービス内容 -->
+			<!-- 業務内容 -->
 			<div class="container pt-2">
 				<div class="container position-relative z-index-3 mt-3 mb-5">
 					<div class="row align-items-center justify-content-center">
@@ -251,57 +251,38 @@
 						</div>
 						<p class="custom-font-secondary custom-font-size-3 line-height-7 mb-0 appear-animation"
 							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">料金案内です。以下ダミーテキスト<br>
-							「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした
+							「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
+							カムパネルラが手をあげました。
+							それから四、五人手をあげました。
+							ジョバンニも手をあげようとして、急いでそのままやめました。
+							たしかにあれがみんな星だと、いつか雑誌で読んだのでしたが、このごろはジョバンニはまるで毎日教室でもねむく、本を読むひまも読む本もないので、なんだかどんなこともよくわからないという気持ちがするのでした。
+							ところが先生は早くもそれを見つけたのでした。
+							「ジョバンニさん。
+							あなたはわかっているのでしょう」ジョバンニは勢いよく立ちあがりましたが、立ってみるともうはっきりとそれを答えることができないのでした。
+							ザネリが前の席からふりかえって、ジョバンニを見てくすっとわらいました。
+							ジョバンニはもうどぎまぎしてまっ赤になってしまいました。
 						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<div class="row justify-content-center process custom-process-style-1 my-5">
-							<div class="process-step col-sm-9 col-md-7 col-lg-4 mb-5 mb-lg-4 appear-animation"
-								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-								<div class="process-step-circle">
-									<strong class="process-step-circle-content text-color-primary">1</strong>
-								</div>
-								<div class="process-step-content px-lg-4">
-									<h4 class="font-weight-bold custom-font-size-2 pb-1 mb-2">BRAINSTORM</h4>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra erat orci, ac
-										auctor.</p>
-								</div>
-							</div>
-							<div class="process-step col-sm-9 col-md-7 col-lg-4 mb-5 mb-lg-4 appear-animation"
-								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500">
-								<div class="process-step-circle">
-									<strong class="process-step-circle-content text-color-primary">2</strong>
-								</div>
-								<div class="process-step-content px-lg-4">
-									<h4 class="font-weight-bold custom-font-size-2 pb-1 mb-2">DEVELOPMENT</h4>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra erat orci, ac
-										auctor.</p>
-								</div>
-							</div>
-							<div class="process-step col-sm-9 col-md-7 col-lg-4 mb-5 mb-lg-4 appear-animation"
-								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700">
-								<div class="process-step-circle">
-									<strong class="process-step-circle-content text-color-primary">3</strong>
-								</div>
-								<div class="process-step-content px-lg-4">
-									<h4 class="font-weight-bold custom-font-size-2 pb-1 mb-2">DELIVERY</h4>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra erat orci, ac
-										auctor.</p>
-								</div>
-							</div>
-						</div>
-
+						<a href="price.html"
+							class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0 appear-animation"
+							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">
+							READ MORE
+							<svg class="ms-2" version="1.1" viewBox="0 0 15.698 8.706" width="17" xml:space="preserve"
+								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+								<polygon stroke="#FFF" stroke-width="0.1" fill="#FFF"
+									points="11.354,0 10.646,0.706 13.786,3.853 0,3.853 0,4.853 13.786,4.853 10.646,8 11.354,8.706 15.698,4.353 " />
+							</svg>
+						</a>
 					</div>
 				</div>
 			</section>
 
-			<!-- Contact -->
+			<!-- アクセス -->
 			<div class="container py-5 my-5">
+				<h2 class="font-weight-bold text-transform-none text-8 pb-2 mb-4 appear-animation"
+					data-appear-animation="fadeInRightShorter">アクセス</h2>
 				<div class="row">
-					<div class="col-lg-6 mb-5 mb-lg-0">
-						<h2 class="font-weight-bold text-transform-none text-8 pb-2 mb-4">Contact Us</h2>
+					<div class="col-lg-6 mb-5 mb-lg-0 appear-animation" data-appear-animation="fadeInRightShorter"
+						data-appear-animation-delay="200">
 						<div class="row">
 							<div class="col">
 								<div class="feature-box feature-box-style-5">
@@ -311,19 +292,11 @@
 											data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 									</div>
 									<div class="feature-box-info">
-										<h3 class="text-transform-none font-weight-bold custom-font-size-1 mb-3">Address</h3>
+										<h3 class="text-transform-none font-weight-bold custom-font-size-1 pb-1 mb-2">住所</h3>
 										<div class="d-flex flex-column flex-md-row">
 											<ul class="list list-unstyled pe-5 mb-md-0">
-												<li class="mb-0"><strong class="text-color-dark custom-font-size-3">Office/Sales</strong></li>
-												<li class="mb-0">123 Street Name</li>
-												<li class="mb-0">New York</li>
-												<li class="mb-0">12345</li>
-											</ul>
-											<ul class="list list-unstyled ps-md-4 mb-0">
-												<li class="mb-0"><strong class="text-color-dark custom-font-size-3">Factory</strong></li>
-												<li class="mb-0">123 Street Name</li>
-												<li class="mb-0">New York</li>
-												<li class="mb-0">12345</li>
+												<li class="mb-0">〒123-4567</li>
+												<li class="mb-0">東京都xx区xx1-2-34</li>
 											</ul>
 										</div>
 									</div>
@@ -339,13 +312,10 @@
 											data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary position-relative bottom-5'}" />
 									</div>
 									<div class="feature-box-info">
-										<h3 class="text-transform-none font-weight-bold custom-font-size-1 pb-1 mb-2">E-mail Address</h3>
+										<h3 class="text-transform-none font-weight-bold custom-font-size-1 pb-1 mb-2">メールアドレス</h3>
 										<ul class="list list-unstyled pe-5 mb-0">
 											<li class="mb-0"><a href="mailto:email@domain.com"
-													class="text-color-default text-color-hover-primary text-decoration-none">porto@porto.com</a>
-											</li>
-											<li class="mb-0"><a href="mailto:email@domain.com"
-													class="text-color-default text-color-hover-primary text-decoration-none">porto2@porto.com</a>
+													class="text-color-default text-color-hover-primary text-decoration-none">info@exsample.com</a>
 											</li>
 										</ul>
 									</div>
@@ -365,13 +335,16 @@
 											<li class="mb-0"><a href="tel:+1234567890"
 													class="text-color-default text-color-hover-primary text-decoration-none">(800) 123-4567</a>
 											</li>
-											<li class="mb-0"><a href="tel:+1234567890"
-													class="text-color-default text-color-hover-primary text-decoration-none">(800) 123-9876</a>
-											</li>
 										</ul>
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 mb-5 mb-lg-0">
+						<div class="access-img">
+							<img src="./img/access.jpg" alt="" class="img-fluid box-shadow-3 appear-animation"
+								data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
 						</div>
 					</div>
 				</div>
