--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 		<div role="main" class="main">
 
 			<!-- first view -->
-			<section class="section section-fv section-with-shape-divider overflow-hidden border-0 m-0"
-				style="background-image: url(./img/fv/top-bg.jpg); background-repeat: no-repeat; background-size: cover; background-position: center 70px;">
+			<section class="section section-fv section-with-shape-divider overflow-hidden border-0 m-0">
 				<div class="shape-divider shape-divider-bottom" style="height: 120px;">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 						y="0px" viewBox="0 0 2000 120" preserveAspectRatio="xMinYMin">
@@ -115,7 +114,7 @@
 				<div class="container custom-container-absolute-centered-x">
 					<div class="row justify-content-end">
 						<div class="col-auto position-relative">
-							<img src="./img/fv/top001.jpg"
+							<img src="./img/fv/top0801.jpg"
 								class="img-fluid box-shadow-4 position-relative bottom-10 right-0 d-none d-sm-block appear-animation"
 								data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="500" alt="" />
 						</div>
@@ -124,21 +123,26 @@
 				<div class="container-fluid px-0 mb-5">
 					<div class="row">
 						<div
-							class="col-sm-9 col-md-8 col-lg-7 col-xl-4 text-center text-sm-end z-index-0 px-5 px-sm-0 mt-5 mt-sm-0 pt-4 pt-sm-0">
+							class="col-sm-9 col-md-6 col-lg-4 text-center text-sm-end z-index-0 px-5 px-sm-0 mt-5 mt-sm-0 pt-4 pt-sm-0">
 							<div class="position-relative top-text-contents p-5">
 								<div class="spacer my-5 py-2 d-none d-sm-block"></div>
 								<div class="overflow-hidden pt-sm-5 mt-sm-5">
-									<h1 class="font-weight-semibold text-10 mb-0 appear-animation" data-appear-animation="maskUp"
-										data-appear-animation-delay="300">キャッチコピーキャッチコピー</h1>
+									<h1 class="font-weight-extra-bold text-13 mb-3 text-left appear-animation" data-appear-animation="maskUp"
+										data-appear-animation-delay="300"><span style="color: #CD65FF;">想</span>いを形に</h1>
 								</div>
 								<div class="overflow-hidden mb-3">
 									<h2 class="font-weight-semibold text-10 line-height-2 mb-0 appear-animation"
-										data-appear-animation="maskUp" data-appear-animation-delay="500">
-										<strong class="font-weight-extra-bold custom-font-size-2">強調部分（あれば）</strong>
+										data-appear-animation="maskUp" data-appear-animation-delay="500">未来を共に<span style="color: #6666FF;">創</span>ります
 									</h2>
 								</div>
-								<p class="custom-font-size-1 appear-animation" data-appear-animation="fadeInUpShorter"
-									data-appear-animation-delay="700">キャッチコピーサブキャッチコピーサブキャッチコピーサブ</p>
+								<p class="custom-font-size-1 text-left appear-animation" data-appear-animation="fadeInUpShorter"
+									data-appear-animation-delay="700">
+									❖　税理士が全ての業務に対応<br>
+									❖　電子帳簿保存法に則したデジタル化を促進<br>
+									❖　海外取引の税務・非居住者の税務に対応<br>
+									❖　クラウド会計導入支援<br>
+									❖　法人設立支援
+									</p>
 								<div class="custom-hero-sub-images-style-1 text-start">
 									<div class="custom-hero-sub-images-shadow"></div>
 									<img src="./img/fv/top002.jpg" class="img-fluid appear-animation" data-appear-animation="fadeIn"
@@ -147,6 +151,11 @@
 								<div class="spacer py-2"></div>
 							</div>
 						</div>
+						<div class="col-sm-3 col-md-6 col-lg-8 text-center text-sm-end z-index-0 px-5 px-sm-0 mt-5 mt-sm-0 pt-4 pt-sm-0">
+							<img class="fv-img appear-animation" src="./img/fv/top001.jpg" alt=""
+							data-appear-animation="fadeInLeftShorter">
+						</div>
+
 					</div>
 				</div>
 			</section>
@@ -157,7 +166,7 @@
 					<div class="col-lg-4">
 						<div class="overflow-hidden mb-2">
 							<h2 class="font-weight-bold text-10 line-height-2 mb-0 appear-animation" data-appear-animation="maskUp"
-								data-appear-animation-delay="200">私たちについて</h2>
+								data-appear-animation-delay="200">税理士紹介</h2>
 						</div>
 						<div class="overflow-hidden mb-3">
 							<h3 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0 appear-animation"
@@ -168,10 +177,11 @@
 					<div class="col-lg-8">
 						<p class="pt-3 pb-1 mb-2 appear-animation" data-appear-animation="fadeInUpShorter"
 							data-appear-animation-delay="450">
-							理念や概要、税理士紹介など。以下ダミーテキストです。<br>
-							「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。カムパネルラが手をあげました。それから四、五人手をあげました。ジョバンニも手をあげようとして、急いでそのままやめました。
+							根拠法令の検討などプロフェッショナルとしての責務を果たしつつも、
+							話しやすいオープンな雰囲気を大切にすること、分かりやすい言葉で説明することを心掛けています。<br>
+							お気軽にご相談ください。
 						</p>
-						<a href="about.html"
+						<a href="introduction.html"
 							class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0 appear-animation"
 							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">
 							READ MORE
@@ -190,7 +200,7 @@
 				<div class="container position-relative z-index-3 mt-3 mb-5">
 					<div class="row align-items-center justify-content-center">
 						<div class="col-lg-6 pe-lg-5 mb-4 mb-lg-0">
-							<img src="img/demos/industry-factory/generic/generic-1.jpg"
+							<img src="img/product/product1.jpg"
 								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInRightShorter"
 								data-appear-animation-delay="200" alt="" />
 						</div>
@@ -202,13 +212,13 @@
 							</p>
 							<ul class="list list-icons list-icons-style-2 list-icons-lg custom-list-icons-icon-size pb-1 mb-3">
 								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 相談内容1</li>
+										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 創業支援</li>
 								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 相談内容2</li>
+										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 税務顧問</li>
 								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 相談内容3</li>
+										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 記帳代行</li>
 								<li class="font-weight-semibold text-color-dark"><i
-										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 相談内容4</li>
+										class="fas fa-check text-color-dark border-color-grey-1 top-7"></i> 各種申告</li>
 							</ul>
 							<a href="service.html"
 								class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0">
@@ -239,7 +249,7 @@
 					</svg>
 				</div>
 
-				<div class="row justify-content-center pt-4 mt-5">
+				<div class="row justify-content-center py-4 my-5">
 					<div class="col-lg-8 text-center">
 						<div class="overflow-hidden">
 							<h2 class="font-weight-bold text-transform-none text-10 line-height-2 mb-1 appear-animation"
@@ -250,17 +260,7 @@
 								data-appear-animation="maskUp" data-appear-animation-delay="400">Price</h3>
 						</div>
 						<p class="custom-font-secondary custom-font-size-3 line-height-7 mb-0 appear-animation"
-							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">料金案内です。以下ダミーテキスト<br>
-							「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-							カムパネルラが手をあげました。
-							それから四、五人手をあげました。
-							ジョバンニも手をあげようとして、急いでそのままやめました。
-							たしかにあれがみんな星だと、いつか雑誌で読んだのでしたが、このごろはジョバンニはまるで毎日教室でもねむく、本を読むひまも読む本もないので、なんだかどんなこともよくわからないという気持ちがするのでした。
-							ところが先生は早くもそれを見つけたのでした。
-							「ジョバンニさん。
-							あなたはわかっているのでしょう」ジョバンニは勢いよく立ちあがりましたが、立ってみるともうはっきりとそれを答えることができないのでした。
-							ザネリが前の席からふりかえって、ジョバンニを見てくすっとわらいました。
-							ジョバンニはもうどぎまぎしてまっ赤になってしまいました。
+							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">準備中...
 						</p>
 						<a href="price.html"
 							class="custom-read-more btn btn-link d-inline-flex align-items-center font-weight-semibold text-decoration-none ps-0 appear-animation"
