--- a/news.html
+++ b/news.html
@@ -122,19 +122,19 @@
 
 			<div class="container my-5">
 				<div class="news-list">
-					<div class="news-list-item appear-animation" data-appear-animation="fadeInUp">
+					<!-- <div class="news-list-item appear-animation" data-appear-animation="fadeInUp">
 						<a href="" class="news-list-link"></a>
 						<p class="news-date">2023.11.11</p>
 						<p class="news-title">お知らせのタイトル</p>
 						<p class="news-text">お知らせの本文を書きます。ダミーテキストダミーテキストダミーテキスト<br>
 							ダミーテキストダミーテキスト
 						</p>
-					</div>
+					</div> -->
 					<div class="news-list-item appear-animation" data-appear-animation="fadeInUp">
 						<a href="" class="news-list-link"></a>
 						<p class="news-date">2023.11.01</p>
 						<p class="news-title">ホームページを公開しました</p>
-						<p class="news-text">お知らせの本文を書きます。ダミーテキストダミーテキストダミーテキスト</p>
+						<p class="news-text">公式ホームページを開設しました。</p>
 					</div>
 				</div>
 			</div>
