--- a/price.html
+++ b/price.html
@@ -120,7 +120,7 @@
 				</div>
 			</section>
 
-			<section class="my-5">
+			<!-- <section class="my-5">
 				<div class="container py-2 my-5">
 					<h3>料金案内</h3>
 					<h6>説明などなど。</h6>
@@ -137,6 +137,14 @@
 						ジョバンニはもうどぎまぎしてまっ赤になってしまいました。
 						先生がまた言いました。
 						「大きな望遠鏡で銀河をよっく調べると銀河はだいたい何でしょう」やっぱり
+					</p>
+				</div>
+			</section> -->
+
+			<section class="my-5">
+				<div class="container py-5">
+					<p class="text-center text-10">
+						準備中...
 					</p>
 				</div>
 			</section>
