--- a/service.html
+++ b/service.html
@@ -125,18 +125,26 @@
 				<div class="container position-relative z-index-3 my-5">
 					<div class="row align-items-center justify-content-center">
 						<div class="col-lg-6 pe-lg-5 mb-4 mb-lg-0">
-							<img src="img/demos/industry-factory/generic/generic-2.jpg"
+							<img src="img/product/product1.jpg"
 								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInRightShorter"
 								data-appear-animation-delay="200" alt="" />
 						</div>
-						<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter"
+						<div class="col-lg-6 service-contents appear-animation" data-appear-animation="fadeInRightShorter"
 							data-appear-animation-delay="500">
-							<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2>
-							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">業務①</h3>
-							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">小見出しやキャッチコピーなどあれば。</p>
+							<!-- <h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2> -->
+							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">個人のお客様</h3>
+							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">創業支援・税務顧問・記帳代行・確定申告代行・LINEサポートなど</p>
+							<p class="mb-3">
+								個人事業主様から法人成りをご検討されている個人のお客様に至るまで業務を提供させていただきます。<br>
+								顧問契約のお客様はLINEでのサポートも可能です。<br>
+								税務顧問契約をご契約頂かなくとも、確定申告書の作成やスポットでのご相談も承っております。
+							</p>
 							<p class="mb-0">
-								本文。以下ダミーテキスト<br>
-								「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、
+								❖　本業に集中したい方、経理作業を楽にしたい方<br>
+								❖　身近に相談できる専門家を探している方<br>
+								❖　譲渡所得が発生したなど、単発での確定申告で内容に不安がある方<br>
+								❖　非居住者で確定申告が必要な方（メールにて英語対応いたします。）<br>
+								❖　海外取引があり、租税条約について確認したい方（メールにて英語対応いたします。）　など
 							</p>
 						</div>
 					</div>
@@ -146,264 +154,29 @@
 			<section class="section custom-section-shape-background custom-section-shape-background-reverse border-0 m-0">
 				<div class="container position-relative z-index-3 my-5">
 					<div class="row align-items-center justify-content-center">
-						<div class="col-lg-6 order-2 order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter"
+						<div class="col-lg-6 order-2 order-lg-1 service-contents appear-animation" data-appear-animation="fadeInLeftShorter"
 							data-appear-animation-delay="200">
-							<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2>
-							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">業務②</h3>
-							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">小見出しやキャッチコピーなどあれば。</p>
+							<!-- <h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2> -->
+							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">法人のお客様</h3>
+							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">税務顧問・記帳代行・帳簿監査・各種申告・LINEサポートなど</p>
+							<p class="mb-3">
+								税務顧問契約を締結した場合、毎月の顧問報酬と決算報酬が基本となります。<br>
+								原則的にペーパーレスで、紙やハンコは使いません。契約も電子にて行います。<br>
+								税務顧問契約をご契約頂かなくとも、スポットでのご相談も承っております。<br>
+								一般的な国内税務のほか、以下の対応も可能です。
+							</p>
 							<p class="mb-0">
-								以下ダミーテキスト。<br>「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、
+								❖　外国税額控除<br>
+								❖　タックスヘイブン対策税制への対応<br>
+								❖　会社の設立支援<br>
+								❖　会社の解散・清算対応
 							</p>
 						</div>
 						<div class="col-lg-6 order-1 order-lg-2 ps-lg-5 mb-4 mb-lg-0">
-							<img src="img/demos/industry-factory/generic/generic-1.jpg"
+							<img src="img/product/product2.jpg"
 								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInLeftShorter"
 								data-appear-animation-delay="500" alt="" />
 						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="section custom-section-shape-background border-0 m-0">
-				<div class="container position-relative z-index-3 my-5">
-					<div class="row align-items-center justify-content-center">
-						<div class="col-lg-6 pe-lg-5 mb-4 mb-lg-0">
-							<img src="img/demos/industry-factory/generic/generic-2.jpg"
-								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInRightShorter"
-								data-appear-animation-delay="200" alt="" />
-						</div>
-						<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter"
-							data-appear-animation-delay="500">
-							<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2>
-							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">業務③</h3>
-							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">小見出しやキャッチコピーなどあれば。</p>
-							<p class="mb-0">
-								本文。以下ダミーテキスト<br>
-								「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。カムパネルラが手をあげました。それから四、五人手をあげました。ジョバンニも手をあげようとして、急いでそのままやめました。たしかにあれが
-							</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="section custom-section-shape-background custom-section-shape-background-reverse border-0 m-0">
-				<div class="container position-relative z-index-3 my-5">
-					<div class="row align-items-center justify-content-center">
-						<div class="col-lg-6 order-2 order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter"
-							data-appear-animation-delay="200">
-							<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">小見出しやキャッチコピーなど</h2>
-							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-3">業務④</h3>
-							<p class="custom-font-secondary custom-font-size-1 line-height-7 pb-2 mb-4">小見出しやキャッチコピーなどあれば。</p>
-							<p class="mb-0">
-								以下ダミーテキスト。<br>「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、
-							</p>
-						</div>
-						<div class="col-lg-6 order-1 order-lg-2 ps-lg-5 mb-4 mb-lg-0">
-							<img src="img/demos/industry-factory/generic/generic-1.jpg"
-								class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInLeftShorter"
-								data-appear-animation-delay="500" alt="" />
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- 業務内容パターン2 -->
-			<section class="section bg-color-white section-height-3 border-0 m-0">
-				<div class="container">
-					<div class="row mb-lg-4">
-						<div class="col-lg-6 appear-animation" data-appear-animation="fadeInLeftShorter"
-							data-appear-animation-delay="300">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-support text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h3 class="font-weight-bold mb-2">業務①</h3>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-										カムパネルラが手をあげました。
-										それから四、五人手をあげました。
-										ジョバンニも手をあげようとして、急いでそのままやめました。
-										たしかにあれがみんな星だと、いつか雑誌で読んだのでしたが、このごろはジョバンニはまるで毎日教室でもねむく、本を読むひまも読む本もないので、なんだかどんなこともよくわからないという気持ちがするのでした。
-										ところが先生は早くもそれを見つけたのでした。
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 appear-animation" data-appear-animation="fadeInLeftShorter"
-							data-appear-animation-delay="300">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-support text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h3 class="font-weight-bold mb-2">業務②</h3>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-										カムパネルラが手をあげました。
-										それから四、五人手をあげました。
-										ジョバンニも手をあげようとして、急いでそのままやめました。
-										たしかにあれがみんな星だと、いつか雑誌で読んだのでしたが、このごろはジョバンニはまるで毎日教室でもねむく、本を読むひまも読む本もないので、なんだかどんなこともよくわからないという気持ちがするのでした。
-										ところが先生は早くもそれを見つけたのでした。
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 appear-animation" data-appear-animation="fadeInUpShorter">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-screen-desktop text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h4 class="font-weight-bold mb-2">業務③</h4>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-										カムパネルラが手をあげました。それから四、五人手をあげました。
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 appear-animation" data-appear-animation="fadeInUpShorter">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-layers text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h4 class="font-weight-bold mb-2">業務④</h4>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-										カムパネルラが手をあげました。それから四、五人手をあげました。
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 appear-animation" data-appear-animation="fadeInRightShorter"
-							data-appear-animation-delay="300">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-menu text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h4 class="font-weight-bold mb-2">業務⑤</h4>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」
-										先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-4 appear-animation" data-appear-animation="fadeInLeftShorter"
-							data-appear-animation-delay="300">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-doc text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h4 class="font-weight-bold mb-2">業務⑥</h4>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」
-										先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-										カムパネルラが手をあげました。
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 appear-animation" data-appear-animation="fadeInUpShorter">
-							<div class="feature-box feature-box-style-2">
-								<div class="feature-box-icon">
-									<i class="icons icon-user text-color-primary"></i>
-								</div>
-								<div class="feature-box-info">
-									<h4 class="font-weight-bold mb-2">業務⑦</h4>
-									<p>
-										本文。以下ダミーテキスト<br>
-										「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指しながら、みんなに問いをかけました。
-										カムパネルラが手をあげました。それから四、五人手をあげました。
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- 相談の流れ -->
-			<section class="section section-with-shape-divider border-0 m-0">
-				<div class="shape-divider shape-divider-reverse-x" style="height: 120px;">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-						y="0px" viewBox="0 0 2000 120" preserveAspectRatio="xMinYMin">
-						<polygon fill="#FFF" points="-11,2 693,112 2019,6 2019,135 -11,135 " />
-					</svg>
-				</div>
-				<div class="shape-divider shape-divider-bottom shape-divider-reverse-y" style="height: 120px;">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-						y="0px" viewBox="0 0 2000 120" preserveAspectRatio="xMinYMin">
-						<polygon fill="#FFF" points="-11,2 693,112 2019,6 2019,135 -11,135 " />
-					</svg>
-				</div>
-
-				<div class="row justify-content-center pt-4 mt-5">
-					<div class="col-lg-8 text-center">
-						<div class="overflow-hidden">
-							<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0 appear-animation"
-								data-appear-animation="maskUp" data-appear-animation-delay="200">Working Process</h2>
-						</div>
-						<div class="overflow-hidden mb-3">
-							<h3 class="font-weight-bold text-transform-none text-9 line-height-2 mb-0 appear-animation"
-								data-appear-animation="maskUp" data-appear-animation-delay="400">ご相談の流れ</h3>
-						</div>
-						<p class="custom-font-secondary custom-font-size-3 line-height-7 mb-0 appear-animation"
-							data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">ご相談の大まかな流れです。以下ダミーテキスト<br>
-							「ではみなさんは、そういうふうに川だと言われたり、乳の流れたあとだと言われたりしていた、このぼんやりと白いものがほんとうは何かご承知ですか」先生は、黒板につるした
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<div class="row justify-content-center process custom-process-style-1 my-5">
-							<div class="process-step col-sm-9 col-md-7 col-lg-4 mb-5 mb-lg-4 appear-animation"
-								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-								<div class="process-step-circle">
-									<strong class="process-step-circle-content text-color-primary">1</strong>
-								</div>
-								<div class="process-step-content px-lg-4">
-									<h4 class="font-weight-bold custom-font-size-2 pb-1 mb-2">BRAINSTORM</h4>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra erat orci, ac
-										auctor.</p>
-								</div>
-							</div>
-							<div class="process-step col-sm-9 col-md-7 col-lg-4 mb-5 mb-lg-4 appear-animation"
-								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500">
-								<div class="process-step-circle">
-									<strong class="process-step-circle-content text-color-primary">2</strong>
-								</div>
-								<div class="process-step-content px-lg-4">
-									<h4 class="font-weight-bold custom-font-size-2 pb-1 mb-2">DEVELOPMENT</h4>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra erat orci, ac
-										auctor.</p>
-								</div>
-							</div>
-							<div class="process-step col-sm-9 col-md-7 col-lg-4 mb-5 mb-lg-4 appear-animation"
-								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700">
-								<div class="process-step-circle">
-									<strong class="process-step-circle-content text-color-primary">3</strong>
-								</div>
-								<div class="process-step-content px-lg-4">
-									<h4 class="font-weight-bold custom-font-size-2 pb-1 mb-2">DELIVERY</h4>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra erat orci, ac
-										auctor.</p>
-								</div>
-							</div>
-						</div>
-
 					</div>
 				</div>
 			</section>
