--- a/contact.html
+++ b/contact.html
@@ -125,51 +125,115 @@
 					<div class="col">
 						<h2 class="font-weight-bold text-transform-none text-8 pb-2 mb-4">お問い合わせフォーム</h2>
 						<p>まずはお気軽にお問い合わせください。</p>
-						<form class="contact-form custom-form-style-1" action="php/contact-form.php" method="POST">
-							<div class="contact-form-success alert alert-success d-none mt-4">
-								<strong>Success!</strong> メッセージは正常に送信されました。
-							</div>
+						<div class="row">
+							<div class="col">
+								<form class="contact-form form-fields-rounded" action="php/contact-form.php" method="POST">
+									<div class="contact-container">
+										<div class="contact-form-success alert alert-success d-none mt-4">
+											<strong>Success!</strong> メッセージは正常に送信されました。
+										</div>
 
-							<div class="contact-form-error alert alert-danger d-none mt-4">
-								<strong>Error!</strong> メッセージの送信中にエラーが発生しました。
-								<span class="mail-error-message text-1 d-block"></span>
-							</div>
+										<div class="contact-form-error alert alert-danger d-none mt-4">
+											<strong>Error!</strong> メッセージの送信中にエラーが発生しました。
+											<span class="mail-error-message text-1 d-block"></span>
+										</div>
 
-							<div class="row">
-								<div class="form-group col">
-									<input type="text" value="" data-msg-required="お名前を入力してください。" maxlength="100"
-										class="form-control" name="name" placeholder="お名前" required>
-								</div>
+										<div class="row">
+											<div class="form-group col-12">
+												<label class="form-label mb-1 text-2">お名前</label>
+												<input type="text" value="" data-msg-required="お名前をご入力ください。" maxlength="100"
+													placeholder="例）山田 太郎" class="form-control text-3 h-auto py-2" name="name" required>
+											</div>
+											<div class="form-group col-12">
+												<label class="form-label mb-1 text-2">メールアドレス</label>
+												<input type="email" value="" data-msg-required="メールアドレスをご入力ください。"
+													data-msg-email="Please enter a valid email address." maxlength="100"
+													placeholder="例）example@example.com" class="form-control text-3 h-auto py-2" name="email" required>
+											</div>
+										</div>
+										<div class="row">
+											<div class="form-group col">
+												<label class="form-label mb-1 text-2">電話番号</label>
+												<input type="text" value="" data-msg-required="電話番号をご入力ください。" maxlength="100"
+													placeholder="例）000-1234-5678" class="form-control text-3 h-auto py-2" name="phone-numbeer" required>
+											</div>
+										</div>
+										<div class="row">
+											<div class="form-group col">
+												<label class="form-label mb-1 text-2">ご相談項目</label>
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="" id="Check1">
+													<label class="form-check-label" for="Check1">
+														内容1
+													</label>
+												</div>
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="" id="Check2">
+													<label class="form-check-label" for="Check2">
+														内容2
+													</label>
+												</div>
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="" id="Check3">
+													<label class="form-check-label" for="Check3">
+														内容3
+													</label>
+												</div>
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="" id="Check4">
+													<label class="form-check-label" for="Check4">
+														内容4
+													</label>
+												</div>
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="" id="Check5">
+													<label class="form-check-label" for="Check5">
+														内容5
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="form-group col">
+												<label class="form-label mb-1 text-2">ご相談内容</label>
+												<textarea maxlength="5000" data-msg-required="Please enter your message." rows="8"
+													class="form-control text-3 h-auto py-2" name="message" required></textarea>
+											</div>
+										</div>
+										<div class="row">
+											<div class="form-group col">
+												<label class="form-label mb-1 text-2">
+													<a href="privacy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
+													をご確認の上、チェックをお願いします。</label>
+												<div class="form-check">
+													<input class="form-check-input" type="checkbox" value="" name="agree"
+														id="tabContent15Checkbox" data-msg-required="You must agree before submiting." required>
+													<label class="form-check-label" for="tabContent15Checkbox">
+														同意する
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="form-group col">
+												<button type="submit"
+													class="btn custom-svg-btn-style-1 custom-svg-btn-style-1-solid text-color-light text-uppercase"
+													data-loading-text="Loading...">
+													<svg class="custom-svg-btn-background" version="1.1" xmlns="http://www.w3.org/2000/svg"
+														xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 210 70"
+														preserveAspectRatio="none">
+														<polygon fill="none" stroke="#D4D4D4" stroke-width="2" stroke-miterlimit="10"
+															points="7,5 185,5 205,34 186,63 7,63 " />
+													</svg>
+													送信
+												</button>
+											</div>
+										</div>
+									</div>
+								</form>
 							</div>
-							<div class="row">
-								<div class="form-group col">
-									<input type="email" value="" data-msg-required="メールアドレスを入力してください。"
-										data-msg-email="有効なメールアドレスを入力してください。" maxlength="100" class="form-control"
-										name="email" placeholder="メールアドレス" required>
-								</div>
-							</div>
-							<div class="row">
-								<div class="form-group col">
-									<textarea maxlength="5000" data-msg-required="メッセージを入力してください。" rows="8"
-										class="form-control" name="message" placeholder="お問い合わせ内容" required></textarea>
-								</div>
-							</div>
-							<div class="row">
-								<div class="form-group col">
-									<button type="submit"
-										class="btn custom-svg-btn-style-1 custom-svg-btn-style-1-solid text-color-light text-uppercase"
-										data-loading-text="Loading...">
-										<svg class="custom-svg-btn-background" version="1.1" xmlns="http://www.w3.org/2000/svg"
-											xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 210 70"
-											preserveAspectRatio="none">
-											<polygon fill="none" stroke="#D4D4D4" stroke-width="2" stroke-miterlimit="10"
-												points="7,5 185,5 205,34 186,63 7,63 " />
-										</svg>
-										送信
-									</button>
-								</div>
-							</div>
-						</form>
+						</div>
+
 					</div>
 				</div>
 			</div>
